Add Course Media Add

--- a/assets/admin/css/custom.css
+++ b/assets/admin/css/custom.css
@@ -37,3 +37,17 @@
     line-height: 2.4;
     border-radius: 1.25rem;
 }
+
+.accordion-text-item{
+    padding: 0.5rem;
+    border: 1px solid #f0f1f5;
+    cursor: pointer;
+    position: relative;
+    color: #333;
+    font-weight: 400;
+    border-radius: 1.25rem;
+    -webkit-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    transition: all 0.5s;
+    background: #f3f3f3;
+}
