--- a/assets/user/css/lingkar-edukasi.webflow.css
+++ b/assets/user/css/lingkar-edukasi.webflow.css
@@ -780,13 +780,13 @@ label {
 }
 
 .hero-slide_image {
-  width: 500px;
+  width: 400px;
 }
 
 .hero-slide_image-wrapper {
   position: absolute;
   right: 10%;
-  bottom: -48px;
+  bottom: -38px;
 }
 
 .hero-overflow-hidden {
@@ -2976,6 +2976,27 @@ label {
     margin-right: 0px;
     margin-bottom: 12px;
     text-align: center;
+  }
+
+  .cdetail-sidebar-absolute {
+    position: unset !important;
+    width: 100%;
+    margin-top: 30px;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+  
+  .coursedetail-tabs {
+    width: 100% !important;
+  }
+
+  .coursedetail-hero_card {
+    padding: 40px !important;
+    flex-direction: column !important;
+  }
+
+  .cdetail-spacer {
+    padding: 0 !important;
   }
 }
 
