--- a/assets/user/css/lingkar-edukasi.webflow.css
+++ b/assets/user/css/lingkar-edukasi.webflow.css
@@ -1614,6 +1614,20 @@ label {
   display: none;
 }
 
+.dropdown-user_setup {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: flex-end;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ffaa46;
+  border-radius: 99px;
+  background-color: #d9d9d9;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+
 .dropdown-user_foto {
   display: flex;
   width: 44px;
