--- a/assets/user/css/custom.css
+++ b/assets/user/css/custom.css
@@ -55,3 +55,47 @@
     border: 1px solid #7186a0;
     /* text-align: center; */
 }
+
+/* PROFIL */
+
+.avatar-container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .avatar-preview {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #f2f2f2;
+    overflow: hidden;
+  }
+  
+  .avatar-preview img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .edit-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  
+  .edit-icon i {
+    color: #555;
+  }
+  
+  #file-input {
+    display: none;
+  }
+  
